tests/machine/x/ocaml/json_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/json_builtin.ml", line 39, characters 2-6:
39 |   json m;
       ^^^^
Error: Unbound value json


Context (around line 39):
  37 | 
  38 | let () =
  39 |   json m;
  40 | 
